Fixed: Adjusted spacing between input field and helpers

--- a/public/cantusdata/frontend/public/css/styles.scss
+++ b/public/cantusdata/frontend/public/css/styles.scss
@@ -494,6 +494,10 @@ body.propagate-height {
     }
 }
 
+.search-input-group {
+    margin-bottom: 15px;
+}
+
 #manuscript-search {
     margin-top: 21px;
 }
